# ferrixcel

./: .env  Cargo.toml  README.md  docker-compose.yml
front/: package.json
front/public/: index.html
front/src/: App.tsx
src/: database.rs  grid.rs  introspection.rs  main.rs  models.rs  query.rs  websocket.rs
